Modified extension class

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 
   "require": {
     "php":                          "~7.4 || ~8.0",
-    "vinecave/collection-bundle":   "^0.0.2",
+    "vinecave/collection-bundle":   "~0.0.2",
     "symfony/config":               "~3.4 || ~4.0 || ~5.0",
     "symfony/dependency-injection": "~3.4 || ~4.0 || ~5.0",
     "symfony/http-kernel":          "~3.4 || ~4.0 || ~5.0"
