--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
 
   "require": {
     "php":                          "~7.4 || ~8.0",
-    "vinecave/collection-bundle":   "~0.0.2",
-    "symfony/config":               "~3.4 || ~4.0 || ~5.0",
-    "symfony/dependency-injection": "~3.4 || ~4.0 || ~5.0",
-    "symfony/http-kernel":          "~3.4 || ~4.0 || ~5.0"
+    "vinecave/collection-bundle":   "~0.0.5",
+    "symfony/config":               "~3.4 || ~4.0 || ~5.0 || ~6.0 || ~7.0",
+    "symfony/dependency-injection": "~3.4 || ~4.0 || ~5.0 || ~6.0 || ~7.0",
+    "symfony/http-kernel":          "~3.4 || ~4.0 || ~5.0 || ~6.0 || ~7.0"
   },
 
   "autoload": {
